<resources>
    <string name="notification_messages">%d messages</string>
    <string name="notification_messages_multi_sender">%1$d messages from %2$d chats</string>
    <string name="notification_action_reply">Reply to %s</string>

    <string name="update_avatar">Update avatar</string>
    <string name="update_avatar_summary">Update friends and groups avatar (restart app maybe required to take effect)</string>

    <string name="friend_messages">Friend messages</string>
    <string name="group_messages">Group messages</string>

    <string name="server_url">Server URL</string>

    <string name="notification">Notification</string>

    <string name="priority">Priority</string>
    <string-array name="priority">
        <item>Min</item>
        <item>Low</item>
        <item>Default</item>
        <item>High</item>
        <item>Max</item>
    </string-array>

    <string name="vibrate">Vibrate</string>
    <string-array name="vibrate">
        <item>Disabled</item>
        <item>Default</item>
        <item>Short</item>
        <item>Long</item>
    </string-array>

    <string name="led_light">LED light</string>
    <string name="sound">Sound</string>

    <string name="select_qq">Select QQ application</string>
    <string name="select_qq_summary">This will be used when notification clicked or get if is foreground</string>

    <string name="dialog_token_share">Share</string>

    <string name="get_foreground">How FFM get foreground package</string>
    <string-array name="get_foreground">
        <item>Do not check foreground package</item>
        <item>Usage stats API (no multi-user support)</item>
        <item>Shizuku (multi-user support)</item>
    </string-array>

    <string name="http_usernames">HTTP Username</string>
    <string name="http_password">HTTP Password</string>
    <string name="show_advanced_options">Show advanced options</string>
    <string name="summary_uri_when_authorization_set">%s (with authorization)</string>
    <string name="notification_channel_friend_message">Friend messages</string>
    <string name="notification_channel_group_message">Group messages</string>
    <string name="notification_channel_progress_message">Progress</string>
    <string name="notification_channel_server_message">Server messages</string>

    <string name="notification_style">Notification style</string>

    <string name="notification_fetching_list">Fetching friends and groups list…</string>
    <string name="notification_fetching">Fetching avatar…</string>
    <string name="notification_fetching_progress">%1$d of %2$d</string>

    <string name="display_name_qq">QQ</string>
    <string name="display_name_tim">TIM</string>
    <string name="display_name_qql">QQ Lite</string>
    <string name="display_name_qqhd">QQ HD</string>
    <string name="display_name_qqi">QQ International</string>
    <string name="display_name_qqjp">QQ Japan</string>

    <string name="action_about">About</string>

    <string name="about_icon_credits"><![CDATA[Thanks <a href="https://twitter.com/xiaoya_er">小雅</a> for illustrating app icon]]></string>

    <string name="notification_message_image">[Image]</string>

    <string name="notification_qr_code_downloaded">QR code downloaded</string>
    <string name="notification_cannot_download">Can\'t download QR code</string>
    <string name="notification_tap_open_qq">Tap to open %s to scan the QR code.</string>
    <string name="notification_network_issue">It may be a network issue.</string>
    <string name="notification_permission_issue">It may be required permission is not granted.</string>
    <string name="notification_singing_in">Signing in…</string>
    <string name="notification_tap_open_qr_code_in_browser">Tap to open QR code in browser.</string>
    <string name="notification_tap_copy_qr_code">Tap to copy QR code URL.</string>

    <string name="notification_action_open_in_browser">Open in browser</string>
    <string name="notification_action_copy_to_clipboard">Copy to clipboard</string>
    <string name="notification_action_send">Send</string>
    <string name="dialog_title_send_via">Send via…</string>

    <string name="cannot_request_permission">Can\'t request permission.</string>

    <string name="notification_server_stop">Mojo-Webqq stopped</string>
    <string name="notification_tap_to_restart">Tap to restart.</string>
    <string name="action_upload_to_server">Upload to server</string>
    <string name="manage_devices">Manage devices</string>
    <string name="manage_devices_summary">Manage registered devices that will receive messages</string>
    <string name="devices_name">%s</string>
    <string name="devices_name_this">%s (this device)</string>
    <string name="register_time">register time: %s</string>
    <string name="manage_devices_header">You can manager devices that will receive messages here.\nTo add this device, please tap add button in toolbar.\nAfter editing, you need to tap upload button in the toolbar to upload new configuration to sever.</string>
    <string name="action_add_this_device">Add this device</string>
    <string name="button_delete">Delete</string>
    <string name="manage_webqq">Mojo-Webqq control</string>
    <string name="manage_webqq_summary">Manage server setting and manage Mojo-Webqq service</string>
    <string name="stop_webqq">Stop</string>
    <string name="restart_webqq">Restart</string>
    <string name="server_status">Server status</string>
    <string name="server_settings">Server settings</string>
    <string name="server_settings_summary">Change server URL, registered devices and control Mojo-Webqq</string>
    <string name="notification_settings">Notification settings</string>
    <string name="notification_settings_summary">Change notification behavior and style</string>
    <plurals name="status_running">
        <item quantity="one">Running, %d device registered.</item>
        <item quantity="other">Running, %d devices registered.</item>
    </plurals>
    <string name="status_running_no_device">Running, but no device is registered.</string>
    <string name="status_webqq_dead">Mojo-Webqq is not running.</string>
    <string name="status_webqq_error">Running, but the log in QR code has not yet been scanned or other error.</string>
    <string name="status_waiting_refresh">Waiting for refresh…</string>
    <string name="status_cannot_connect_server_error">Can\'t connect to server: %s.</string>
    <string name="status_token_changed">Token may have changed, you may need to add this device and upload again in Manage Devices.</string>
    <string name="restart_webqq_summary">Restart Mojo-Webqq on server (if not running)</string>
    <string name="action_donate">Donate</string>
    <string name="dialog_donate_title">Pay Rikka NOW ////</string>
    <string name="dialog_donate_message">Rikka have spent a lot time on this project, so Rikka should be paied. (Alipay only)</string>
    <string name="dialog_donate_ok">Pay NOW</string>
    <string name="dialog_donate_no">Bad Rikka</string>
    <string name="dialog_donate_copy">Copy account</string>
    <string name="stop_webqq_summary">Force stop Mojo-Webqq on server</string>
    <string name="status_version_not_match">Server version (%1$s) do not match client requirement (%2$s), some features may not work as excepted.</string>
    <string name="dialog_config_not_uploaded_title">Settings have been changed</string>
    <string name="dialog_config_not_uploaded_message">You will lost your changes if you do not upload them to server.</string>
    <string name="dialog_config_not_uploaded_exit">Discard changes</string>
    <string name="dialog_config_not_uploaded_upload">Upload</string>
    <string name="settings_per_group_title">Per-group settings</string>
    <string name="whitelist_summary_group_on">Only receive messages from enabled groups</string>
    <string name="whitelist_summary_group_off">Receive messages from all groups</string>
    <string name="dialog_no_google_title">Google service framework not found</string>
    <string name="dialog_no_google_message">Google service framework is not installed or installed but disabled.\nFFM relays on Firebase Cloud Messaging and it requires Google service framework.</string>
    <string name="dialog_no_google_exit">Exit FFM</string>
    <string name="dialog_token_message" translatable="false"><![CDATA[<font face=\"monospace\">%s</font>]]></string>
    <string name="toast_succeeded">Succeeded.</string>
    <string name="toast_something_wroing">Something wrong:\n%s</string>
    <string name="toast_nothing_changed">Nothing changed.</string>
    <string name="toast_token_exists">Already added this devices.</string>
    <string name="toast_token_requesting">Can\'t get token, try requesting…</string>
    <string name="whitelist_group_no_uid">Can\'t toggle because unable to get group uid</string>
    <string name="whitelist_summary_discuss_on">Only receive messages from enabled discusses</string>
    <string name="whitelist_summary_discuss_off">Receive messages from all discusses</string>
    <string name="settings_per_discuss_title">Per-discuss settings</string>
    <string name="settings_per_group_summary_off" translatable="false">@string/whitelist_summary_group_off</string>
    <string name="settings_per_discuss_summary_off" translatable="false">@string/whitelist_summary_discuss_off</string>
    <plurals name="settings_per_group_summary_on">
        <item quantity="zero">Only receive messages from %d group</item>
        <item quantity="one">Only receive messages from %d group</item>
        <item quantity="other">Only receive messages from %d groups</item>
    </plurals>
    <plurals name="settings_per_discuss_summary_on">
        <item quantity="zero">Only receive messages from %d discuss</item>
        <item quantity="one">Only receive messages from %d discuss</item>
        <item quantity="other">Only receive messages from %d discusses</item>
    </plurals>
    <string name="settings_notification_friend_on">On</string>
    <string name="settings_notification_friend_off">Off</string>
    <string name="settings_notification_group_on">On</string>
    <string name="settings_notification_group_off">Off, but messages that \@ you will be treated as friend message</string>
</resources>
