<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <moe.shizuku.fcmformojo.preference.HttpUriPreference
        android:key="server_url"
        app:keyHttpUsername="server_http_username"
        app:keyHttpPassword="server_http_password"
        android:title="@string/server_url"
        android:summary="%s"
        app:summaryWhenAuthorizationSet="@string/summary_uri_when_authorization_set"
        android:selectAllOnFocus="true"
        android:defaultValue="http://0.0.0.0:5000"/>

    <Preference
        android:key="view_token"
        android:title="@string/manage_devices"
        android:summary="@string/manage_devices_summary">

        <intent
            android:targetPackage="moe.shizuku.fcmformojo"
            android:targetClass="moe.shizuku.fcmformojo.RegistrationIdsActivity"/>

    </Preference>

    <Preference
        android:key="restart_webqq"
        android:title="@string/restart_webqq"
        android:summary="@string/restart_webqq_summary"/>

    <Preference
        android:key="stop_webqq"
        android:title="@string/stop_webqq"
        android:summary="@string/stop_webqq_summary"/>

</PreferenceScreen>