<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <moe.shizuku.fcmformojo.preference.ServerStatusPreference
        android:title="@string/server_status"
        android:layout="@layout/preference_server"/>

    <Preference
        android:key="server_settings"
        android:title="@string/server_settings"
        android:summary="@string/server_settings_summary"
        android:icon="@drawable/ic_settings_server_24dp"
        android:layout="@layout/preference_main"/>

    <Preference
        android:key="notification_settings"
        android:title="@string/notification_settings"
        android:summary="@string/notification_settings_summary"
        android:icon="@drawable/ic_settings_notification_24dp"
        android:layout="@layout/preference_main"/>

</PreferenceScreen>