<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <SimpleMenuPreference
        android:key="qq_package"
        android:title="@string/select_qq"
        android:hint="@string/select_qq_summary"
        android:summary="%s"
        android:defaultValue="com.tencent.mobileqq"/>

    <SimpleMenuPreference
        android:key="get_foreground"
        android:title="@string/get_foreground"
        android:summary="%s"
        android:entries="@array/get_foreground"
        android:entryValues="@array/get_foreground_value"
        android:defaultValue="disable"/>

    <Preference
        android:key="update_avatar"
        android:title="@string/update_avatar"
        android:summary="@string/update_avatar_summary"/>

    <PreferenceCategory
        android:title="@string/friend_messages">

        <SwitchPreference
            android:key="notification"
            android:title="@string/notification"
            android:defaultValue="true"
            android:enabled="false"/>

        <SwitchPreference
            android:key="light"
            android:title="@string/led_light"
            android:defaultValue="true"
            android:dependency="notification"/>

        <SimpleMenuPreference
            android:key="vibrate"
            android:title="@string/vibrate"
            android:summary="%s"
            android:entries="@array/vibrate"
            android:entryValues="@array/vibrate_value"
            android:defaultValue="1"
            android:dependency="notification"/>

        <RingtonePreference
            android:key="sound"
            android:title="@string/sound"
            android:summary="%s"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notification"/>

        <SimpleMenuPreference
            android:key="priority"
            android:title="@string/priority"
            android:summary="%s"
            android:entries="@array/priority"
            android:entryValues="@array/priority_value"
            android:defaultValue="1"
            android:dependency="notification"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/group_messages">

        <SwitchPreference
            android:key="notification_group"
            android:summary="@string/at_as_friend"
            android:title="@string/notification"
            android:defaultValue="false"
            android:enabled="false"/>

        <SwitchPreference
            android:key="light_group"
            android:title="@string/led_light"
            android:defaultValue="true"
            android:dependency="notification_group"/>

        <SimpleMenuPreference
            android:key="vibrate_group"
            android:title="@string/vibrate"
            android:summary="%s"
            android:entries="@array/vibrate"
            android:entryValues="@array/vibrate_value"
            android:defaultValue="1"
            android:dependency="notification_group"/>

        <RingtonePreference
            android:key="sound_group"
            android:title="@string/sound"
            android:summary="%s"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notification_group"/>

        <SimpleMenuPreference
            android:key="priority_group"
            android:title="@string/priority"
            android:summary="%s"
            android:entries="@array/priority"
            android:entryValues="@array/priority_value"
            android:defaultValue="1"
            android:dependency="notification_group"/>

    </PreferenceCategory>

</PreferenceScreen>